# Web-HW10

./: README.md
Web-HW10/: pyproject.toml
Web-HW10/notes/noteapp/: views.py
Web-HW10/notes/noteapp/migrations/: 0001_initial.py  0002_note_user_tag_user_alter_tag_name_and_more.py
Web-HW10/notes/notes/: settings.py
Web-HW10/notes/users/: views.py
Web-HW10/notes/users/migrations/: 0001_initial.py
